Fixed cut off parking box

--- a/dev_folder1919/css/style.css
+++ b/dev_folder1919/css/style.css
@@ -169,7 +169,7 @@ html, body {
 {
    font-family: 'Bender-Black', serif;
    width: 900px;
-   height: 800px;
+   height: 900px;
    display: inline-block;
    overflow: hidden;
 }
@@ -196,10 +196,10 @@ html, body {
 }
 #artist_slide_canvas, #film_slide_canvas, #dance_slide_canvas
 {
-   margin-top: 150px;
+   margin-top: 120px;
    position: relative;
    width: 900px;
-   height: 500px;
+   height: 600px;
 }
 #opener_wrapper,
 #headliner_wrapper,
@@ -416,7 +416,7 @@ html, body {
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
-   height: 900px;
+   height: 1000px;
 }
 
 
